--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "canvas": "^3.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "face-api.js": "^0.22.2",
     "fs": "^0.0.1-security",
     "mongoose": "^8.11.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "uuid": "^11.1.0"
   }
