--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "dotenv": "^16.0.3"
   }
 }
